--- a/README
+++ b/README
@@ -1,3 +1,11 @@
 Astrid OpenCRX addon - synchronize Astrid with OpenCRX activities (www.opencrx.org)
 
 This project is dependent on AstridApi project.
+
+note
+в файле OpencrxUtils.java который находится в пакете ru.otdelit.astrid.opencrx.api в методе convertOpencrxCreatorsXmlToJson ошибка на строке 
+   parser.parse(xml, p);
+[13.09.2013 8:46:26] Android Developer: с сервера он данные скачивает, разбирает вроде
+[13.09.2013 8:46:37] Android Developer: но SAXParser не хочет работать
+[13.09.2013 8:46:54] Android Developer: не знаю почему, так как он не имеет отношения к новоой версии астрида
+[13.09.2013 8:47:02] Android Developer: SAXParser это библиотека для java
